# Volleyball-Manager

./: BazaDeDate.cpp  BazaDeDate.h  Button.cpp  Button.h  CMakeLists.txt  Echipe.cpp  Echipe.h  Exceptii.h  FirstSixScreen.cpp  FirstSixScreen.h  Gestiune.h  HistoryScreen.h  InitialDraftScreen.cpp  InitialDraftScreen.h  Liga.cpp  Liga.h  LigaScreen.cpp  LigaScreen.h  ListaJucatoriGui.h  MainMenuScreen.cpp  MainMenuScreen.h  MatchLeague.cpp  MatchLeague.h  MatchScreen.cpp  MatchScreen.h  Meci.cpp  Meci.h  PachetScreen.cpp  PachetScreen.h  Pachete.cpp  Pachete.h  README.md  ScoreboardScreen.cpp  ScoreboardScreen.h  Screen.h  Strategies.h  TableScore.cpp  TableScore.h  TimeoutScreen.cpp  TimeoutScreen.h  (+16 more)
.github/actions/configure-cmake/: action.yml
.github/workflows/: cmake.yml
include/: Echipe.h  HistoryScreen.h  Liga.h  MatchScreen.h  Meci.h  PachetScreen.h  Pachete.h  TimeoutScreen.h  Turneu.h  manageri.h
scripts/: cmake.sh  run_valgrind.sh
src/: BazaDeDate.cpp  Echipe.cpp  FirstSixScreen.cpp  Liga.cpp  LigaScreen.cpp  ListaJucatoriGui.cpp  MatchLeague.cpp  MatchScreen.cpp  Meci.cpp  PachetScreen.cpp  Pachete.cpp  TableScore.cpp  Turneu.cpp  UsernameScreen.cpp  main.cpp  main_console.cpp  manageri.cpp
